# SmokeFreeTracker

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  deploy  pyproject.toml
config/: manage.py  settings.py  urls.py
smoke-free-ui/: index.html  package-lock.json  package.json
smoke-free-ui/src/: main.ts
staticfiles/tracker/: style.css
tracker/: admin.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_delete_smokingquitdata.py
tracker/templates/tracker/: dashboard.html
